// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test Vine compiler analyze > analyze \`vineExpose\` and \`vineOptions\` macro calls 1`] = `
Node {
  "end": 64,
  "loc": SourceLocation {
    "end": Position {
      "column": 22,
      "index": 64,
      "line": 4,
    },
    "filename": undefined,
    "identifierName": undefined,
    "start": Position {
      "column": 13,
      "index": 55,
      "line": 4,
    },
  },
  "properties": [
    Node {
      "computed": false,
      "end": 62,
      "extra": {
        "shorthand": true,
      },
      "key": Node {
        "end": 62,
        "loc": SourceLocation {
          "end": Position {
            "column": 20,
            "index": 62,
            "line": 4,
          },
          "filename": undefined,
          "identifierName": "count",
          "start": Position {
            "column": 15,
            "index": 57,
            "line": 4,
          },
        },
        "name": "count",
        "start": 57,
        "type": "Identifier",
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 20,
          "index": 62,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 15,
          "index": 57,
          "line": 4,
        },
      },
      "method": false,
      "shorthand": true,
      "start": 57,
      "type": "ObjectProperty",
      "value": Node {
        "end": 62,
        "extra": undefined,
        "loc": SourceLocation {
          "end": Position {
            "column": 20,
            "index": 62,
            "line": 4,
          },
          "filename": undefined,
          "identifierName": "count",
          "start": Position {
            "column": 15,
            "index": 57,
            "line": 4,
          },
        },
        "name": "count",
        "range": undefined,
        "start": 57,
        "type": "Identifier",
      },
    },
  ],
  "start": 55,
  "type": "ObjectExpression",
}
`;

exports[`Test Vine compiler analyze > analyze \`vineExpose\` and \`vineOptions\` macro calls 2`] = `
Node {
  "end": 130,
  "extra": {
    "trailingComma": 125,
  },
  "loc": SourceLocation {
    "end": Position {
      "column": 3,
      "index": 130,
      "line": 8,
    },
    "filename": undefined,
    "identifierName": undefined,
    "start": Position {
      "column": 14,
      "index": 80,
      "line": 5,
    },
  },
  "properties": [
    Node {
      "computed": false,
      "end": 100,
      "key": Node {
        "end": 90,
        "loc": SourceLocation {
          "end": Position {
            "column": 8,
            "index": 90,
            "line": 6,
          },
          "filename": undefined,
          "identifierName": "name",
          "start": Position {
            "column": 4,
            "index": 86,
            "line": 6,
          },
        },
        "name": "name",
        "start": 86,
        "type": "Identifier",
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 18,
          "index": 100,
          "line": 6,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 4,
          "index": 86,
          "line": 6,
        },
      },
      "method": false,
      "shorthand": false,
      "start": 86,
      "type": "ObjectProperty",
      "value": Node {
        "end": 100,
        "extra": {
          "raw": "'MyComp'",
          "rawValue": "MyComp",
        },
        "loc": SourceLocation {
          "end": Position {
            "column": 18,
            "index": 100,
            "line": 6,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 10,
            "index": 92,
            "line": 6,
          },
        },
        "start": 92,
        "type": "StringLiteral",
        "value": "MyComp",
      },
    },
    Node {
      "computed": false,
      "end": 125,
      "key": Node {
        "end": 118,
        "loc": SourceLocation {
          "end": Position {
            "column": 16,
            "index": 118,
            "line": 7,
          },
          "filename": undefined,
          "identifierName": "inheritAttrs",
          "start": Position {
            "column": 4,
            "index": 106,
            "line": 7,
          },
        },
        "name": "inheritAttrs",
        "start": 106,
        "type": "Identifier",
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 23,
          "index": 125,
          "line": 7,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 4,
          "index": 106,
          "line": 7,
        },
      },
      "method": false,
      "shorthand": false,
      "start": 106,
      "type": "ObjectProperty",
      "value": Node {
        "end": 125,
        "loc": SourceLocation {
          "end": Position {
            "column": 23,
            "index": 125,
            "line": 7,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 18,
            "index": 120,
            "line": 7,
          },
        },
        "start": 120,
        "type": "BooleanLiteral",
        "value": false,
      },
    },
  ],
  "start": 80,
  "type": "ObjectExpression",
}
`;

exports[`Test Vine compiler analyze > analyze vine component props by macro calls 1`] = `
{
  "disabled": {
    "isBool": true,
    "isFromMacroDefine": true,
    "isRequired": false,
    "validator": undefined,
  },
  "name": {
    "isBool": false,
    "isFromMacroDefine": true,
    "isRequired": true,
    "validator": undefined,
  },
  "title": {
    "default": Node {
      "end": 152,
      "extra": {
        "raw": "'# Title'",
        "rawValue": "# Title",
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 46,
          "index": 152,
          "line": 5,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 37,
          "index": 143,
          "line": 5,
        },
      },
      "start": 143,
      "type": "StringLiteral",
      "value": "# Title",
    },
    "isBool": false,
    "isFromMacroDefine": true,
    "isRequired": true,
    "validator": Node {
      "async": false,
      "body": Node {
        "arguments": [
          Node {
            "end": 189,
            "extra": {
              "raw": "'#'",
              "rawValue": "#",
            },
            "loc": SourceLocation {
              "end": Position {
                "column": 83,
                "index": 189,
                "line": 5,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 80,
                "index": 186,
                "line": 5,
              },
            },
            "start": 186,
            "type": "StringLiteral",
            "value": "#",
          },
        ],
        "callee": Node {
          "computed": false,
          "end": 185,
          "loc": SourceLocation {
            "end": Position {
              "column": 79,
              "index": 185,
              "line": 5,
            },
            "filename": undefined,
            "identifierName": undefined,
            "start": Position {
              "column": 65,
              "index": 171,
              "line": 5,
            },
          },
          "object": Node {
            "end": 174,
            "loc": SourceLocation {
              "end": Position {
                "column": 68,
                "index": 174,
                "line": 5,
              },
              "filename": undefined,
              "identifierName": "val",
              "start": Position {
                "column": 65,
                "index": 171,
                "line": 5,
              },
            },
            "name": "val",
            "start": 171,
            "type": "Identifier",
          },
          "property": Node {
            "end": 185,
            "loc": SourceLocation {
              "end": Position {
                "column": 79,
                "index": 185,
                "line": 5,
              },
              "filename": undefined,
              "identifierName": "startsWith",
              "start": Position {
                "column": 69,
                "index": 175,
                "line": 5,
              },
            },
            "name": "startsWith",
            "start": 175,
            "type": "Identifier",
          },
          "start": 171,
          "type": "MemberExpression",
        },
        "end": 190,
        "loc": SourceLocation {
          "end": Position {
            "column": 84,
            "index": 190,
            "line": 5,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 65,
            "index": 171,
            "line": 5,
          },
        },
        "start": 171,
        "type": "CallExpression",
      },
      "end": 190,
      "generator": false,
      "id": null,
      "loc": SourceLocation {
        "end": Position {
          "column": 84,
          "index": 190,
          "line": 5,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 48,
          "index": 154,
          "line": 5,
        },
      },
      "params": [
        Node {
          "end": 166,
          "loc": SourceLocation {
            "end": Position {
              "column": 60,
              "index": 166,
              "line": 5,
            },
            "filename": undefined,
            "identifierName": "val",
            "start": Position {
              "column": 49,
              "index": 155,
              "line": 5,
            },
          },
          "name": "val",
          "start": 155,
          "type": "Identifier",
          "typeAnnotation": Node {
            "end": 166,
            "loc": SourceLocation {
              "end": Position {
                "column": 60,
                "index": 166,
                "line": 5,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 52,
                "index": 158,
                "line": 5,
              },
            },
            "start": 158,
            "type": "TSTypeAnnotation",
            "typeAnnotation": Node {
              "end": 166,
              "loc": SourceLocation {
                "end": Position {
                  "column": 60,
                  "index": 166,
                  "line": 5,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 54,
                  "index": 160,
                  "line": 5,
                },
              },
              "start": 160,
              "type": "TSStringKeyword",
            },
          },
        },
      ],
      "start": 154,
      "type": "ArrowFunctionExpression",
    },
  },
}
`;

exports[`Test Vine compiler analyze > analyze vine template 1`] = `
{
  "cached": 0,
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "content": {
                "constType": 0,
                "content": "title",
                "isStatic": false,
                "loc": {
                  "end": {
                    "column": 19,
                    "line": 3,
                    "offset": 29,
                  },
                  "source": "title",
                  "start": {
                    "column": 14,
                    "line": 3,
                    "offset": 24,
                  },
                },
                "type": 4,
              },
              "loc": {
                "end": {
                  "column": 22,
                  "line": 3,
                  "offset": 32,
                },
                "source": "{{ title }}",
                "start": {
                  "column": 11,
                  "line": 3,
                  "offset": 21,
                },
              },
              "type": 5,
            },
          ],
          "codegenNode": undefined,
          "isSelfClosing": false,
          "loc": {
            "end": {
              "column": 27,
              "line": 3,
              "offset": 37,
            },
            "source": "<h1>{{ title }}</h1>",
            "start": {
              "column": 7,
              "line": 3,
              "offset": 17,
            },
          },
          "ns": 0,
          "props": [],
          "tag": "h1",
          "tagType": 0,
          "type": 1,
        },
        {
          "children": [],
          "codegenNode": undefined,
          "isSelfClosing": true,
          "loc": {
            "end": {
              "column": 15,
              "line": 4,
              "offset": 52,
            },
            "source": "<slot />",
            "start": {
              "column": 7,
              "line": 4,
              "offset": 44,
            },
          },
          "ns": 0,
          "props": [],
          "tag": "slot",
          "tagType": 2,
          "type": 1,
        },
      ],
      "codegenNode": undefined,
      "isSelfClosing": false,
      "loc": {
        "end": {
          "column": 11,
          "line": 5,
          "offset": 63,
        },
        "source": "<div>
      <h1>{{ title }}</h1>
      <slot />
    </div>",
        "start": {
          "column": 5,
          "line": 2,
          "offset": 5,
        },
      },
      "ns": 0,
      "props": [],
      "tag": "div",
      "tagType": 0,
      "type": 1,
    },
  ],
  "codegenNode": undefined,
  "components": [],
  "directives": [],
  "helpers": Set {},
  "hoists": [],
  "imports": [],
  "loc": {
    "end": {
      "column": 3,
      "line": 6,
      "offset": 66,
    },
    "source": "
    <div>
      <h1>{{ title }}</h1>
      <slot />
    </div>
  ",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "temps": 0,
  "type": 0,
}
`;

exports[`Test Vine compiler analyze > analyze vine template 2`] = `
{
  "cached": 0,
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "content": "Test inner content",
              "loc": {
                "end": {
                  "column": 30,
                  "line": 3,
                  "offset": 64,
                },
                "source": "Test inner content",
                "start": {
                  "column": 12,
                  "line": 3,
                  "offset": 46,
                },
              },
              "type": 2,
            },
          ],
          "codegenNode": undefined,
          "isSelfClosing": false,
          "loc": {
            "end": {
              "column": 36,
              "line": 3,
              "offset": 70,
            },
            "source": "<div>Test inner content</div>",
            "start": {
              "column": 7,
              "line": 3,
              "offset": 41,
            },
          },
          "ns": 0,
          "props": [],
          "tag": "div",
          "tagType": 0,
          "type": 1,
        },
      ],
      "codegenNode": undefined,
      "isSelfClosing": false,
      "loc": {
        "end": {
          "column": 13,
          "line": 4,
          "offset": 83,
        },
        "source": "<MyBox title=\\"Test template\\">
      <div>Test inner content</div>
    </MyBox>",
        "start": {
          "column": 5,
          "line": 2,
          "offset": 5,
        },
      },
      "ns": 0,
      "props": [
        {
          "loc": {
            "end": {
              "column": 33,
              "line": 2,
              "offset": 33,
            },
            "source": "title=\\"Test template\\"",
            "start": {
              "column": 12,
              "line": 2,
              "offset": 12,
            },
          },
          "name": "title",
          "type": 6,
          "value": {
            "content": "Test template",
            "loc": {
              "end": {
                "column": 33,
                "line": 2,
                "offset": 33,
              },
              "source": "\\"Test template\\"",
              "start": {
                "column": 18,
                "line": 2,
                "offset": 18,
              },
            },
            "type": 2,
          },
        },
      ],
      "tag": "MyBox",
      "tagType": 1,
      "type": 1,
    },
  ],
  "codegenNode": undefined,
  "components": [],
  "directives": [],
  "helpers": Set {},
  "hoists": [],
  "imports": [],
  "loc": {
    "end": {
      "column": 3,
      "line": 5,
      "offset": 86,
    },
    "source": "
    <MyBox title=\\"Test template\\">
      <div>Test inner content</div>
    </MyBox>
  ",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "temps": 0,
  "type": 0,
}
`;
